# nri_scheduler

./: .editorconfig  .gitignore  .prettierrc  .rustfmt.toml  Cargo.toml  README.md  docker-compose.yml  env.example  eslint.config.mjs  openapi.json  package-lock.json  package.json  rewrite.sh  scripts.sh  start.js  todo.md  tsconfig.json  vite.config.js
.cargo-husky/hooks/: pre-commit  pre-push
client/: index.html
client/src/: api.ts  calendar.tsx  demo.ts  fetching.ts  index.css  index.tsx  main.tsx  registration.css  registration.tsx  sign_in.tsx  types.ts
client/src/components/: header.tsx  layout.tsx
client/src/components/UI/: Button.tsx
client/src/components/event/: EventDetail.tsx
client/src/components/form/: AuthForm.tsx  FormWrapper.tsx  RegisterForm.tsx
client/src/components/header/: Header.tsx
client/src/components/pages/: calendar.tsx  event.tsx  index.ts  mastery.tsx  profile.tsx  registration.tsx  sign_in.tsx
client/src/components/pages/calendar/: calendar.css  calendar.tsx  company.tsx  location.tsx
client/src/components/pages/event/: create_event.tsx  event.tsx
client/src/components/pages/home/: home.tsx
client/src/components/pages/not-found/: not-found.tsx
client/src/components/pages/sign-in/: singin.tsx
client/src/components/pages/sign-up/: signup.tsx
client/src/components/ui/: close-button.tsx  drawer.tsx  field.tsx  input-group.tsx  password-input.tsx  popover.tsx  provider.tsx
client/src/modules/: api.ts
client/src/modules/common/: column.tsx
client/src/modules/context/: LayoutContext.tsx
client/src/modules/query/: fetcher.ts
client/src/modules/store/: profile.ts  tz.ts
client/src/pages/: Layout.tsx  calendar.tsx  event.tsx  index.ts  registration.tsx  sign_in.tsx
client/src/pages/authorization/: sign_in.tsx
client/src/pages/calendar/: calendar.tsx
client/src/pages/event-detail/: create_event.tsx  event.tsx
client/src/pages/not-found/: NotFound.tsx
client/src/pages/registration/: registration.tsx
client/src/query/: fetcher.ts
client/src/store/: fetching.ts  mastery.ts  profile.ts  tz.ts
client/src/styles/: index.css
migrations/: 20241117000000_uuid_v6.down.sql  20241117000000_uuid_v6.up.sql  20241117000001_uuid_v7.down.sql  20241117000001_uuid_v7.up.sql  20241117000002_restore_timestamp_from_uuid6.down.sql  20241117000002_restore_timestamp_from_uuid6.up.sql  20241117000003_users.up.sql  20241117000004_companies.down.sql  20241117000004_companies.up.sql  20241117000005_locations.down.sql  20241117000005_locations.up.sql  20241117000006_events.up.sql  20241117000007_applications.up.sql  20250121000000_cities.down.sql  20250121000000_cities.up.sql
server/: auth.rs  cookie.rs  cors.rs  graceful_shutdown.rs  lib.rs  main.rs  openapi.rs  router.rs  shared.rs
server/config/: init.rs  mod.rs
server/dto/: auth.rs  common.rs  company.rs  event.rs  location.rs  mod.rs
server/handlers/: mod.rs
server/handlers/companies/: mod.rs
server/handlers/events/: mod.rs
server/handlers/locations/: mod.rs
server/repository/: mod.rs  models.rs
server/repository/implementations/: mod.rs
server/repository/implementations/postgr/: mod.rs  pool.rs
server/system_models/: errors.rs  mod.rs  response.rs  scenario_status.rs  serving_error.rs
server/vite/: mod.rs
src/: auth.rs  dto.rs  handler.rs  lib.rs  main.rs  router.rs  shared.rs
src/dto/: common.rs  company.rs  event.rs  location.rs  mod.rs
src/handlers/: mod.rs
src/handlers/companies/: mod.rs
src/handlers/events/: mod.rs
src/handlers/locations/: mod.rs
src/repository/: mod.rs  models.rs
src/repository/implementations/: mod.rs
src/repository/implementations/postgr/: mod.rs
src/system_models/: errors.rs  mod.rs  response.rs
