[package]
name = "nri_scheduler"
description = "my outstanding trpg scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
argon2 = "0.5.3"
axum = "0.7.9"
axum-extra = { version = "0.9.6", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive-masked = "0.1.0"
jsonwebtoken = "9.3.0"
lazy_static = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.42.0", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde"] }

[dev-dependencies]
cargo-husky = { version = "^1.5.0", default-features = false, features = ["user-hooks"] }

[lints.clippy]
needless_return = "allow"
