[package]
name = "nri_scheduler"
description = "my outstanding trpg scheduler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nri_scheduler"
path = "server/main.rs"

[lib]
name = "nri_scheduler"
path = "server/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
argon2 = "0.5.3"
axum = "0.8.1"
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.39", features = ["serde"] }
derive-masked = "0.1.0"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
rand = "0.9.0"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-none", "postgres", "chrono", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.14.0", features = ["serde"] }

[dev-dependencies]
cargo-husky = { version = "^1.5.0", default-features = false, features = ["user-hooks"] }

[lints.clippy]
needless_return = "allow"
